script geracao horario previsto do onibus